--- a/app/src/main/res/layout/fragment_registro.xml
+++ b/app/src/main/res/layout/fragment_registro.xml
@@ -60,6 +60,14 @@
                     android:textColor="@color/select_image_red"
                     app:icon="@drawable/ic_image"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnTomarFoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="📷Tomar Foto"
+                    android:textColor="@color/select_image_red"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
