--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,101 @@
     <color name="input_text_black">#212121</color>
     <color name="register_button_dark_yellow">#FBC02D</color>
     <color name="register_button_light_yellow">#FFE082</color>
+
+    <!--Mas colores -->
+    <color name="amber">#FFBF00</color>
+    <color name="azul_marino">#000080</color>
+    <color name="azul_celeste">#87CEEB</color>
+    <color name="verde_esmeralda">#50C878</color>
+    <color name="rojo_escarlata">#FF2400</color>
+    <color name="amarillo_ocre">#CC7722</color>
+    <color name="naranja">#FFA500</color>
+    <color name="violeta">#8F00FF</color>
+    <color name="cian">#00FFFF</color>
+    <color name="magenta">#FF00FF</color>
+    <color name="rosa">#FFC0CB</color>
+    <color name="marron">#A52A2A</color>
+    <color name="gris">#808080</color>
+    <color name="beige">#F5F5DC</color>
+    <color name="ocre">#CC7722</color>
+    <color name="gris_claro">#D3D3D3</color>
+    <color name="oliva">#808000</color>
+    <color name="pardo">#964B00</color>
+    <color name="lila">#C8A2C8</color>
+    <color name="granate">#800000</color>
+    <color name="turquesa">#40E0D0</color>
+    <color name="verde_lima">#BFFF00</color>
+    <color name="mandarina">#FF9200</color>
+    <color name="lavanda">#E6E6FA</color>
+    <color name="coral">#FF7F50</color>
+    <color name="albaricoque">#FBCEB1</color>
+    <color name="menta">#98FF98</color>
+    <color name="melon">#F7BC99</color>
+    <color name="salmón">#FA8072</color>
+    <color name="morado">#800080</color>
+    <color name="champán">#F7E7CE</color>
+    <color name="vino">#722F37</color>
+    <color name="mostaza">#FFDB58</color>
+    <color name="caramelo">#AF6E4D</color>
+    <color name="tomate">#FF6347</color>
+    <color name="azul_acero">#4682B4</color>
+    <color name="naranja_claro">#FFCC99</color>
+    <color name="rojo_carmesí">#DC143C</color>
+    <color name="rojo_indio">#CD5C5C</color>
+    <color name="rojo_marfil">#EED5D2</color>
+    <color name="fucsia">#FF00FF</color>
+    <color name="cereza">#DE3163</color>
+    <color name="rosa_caliente">#FF69B4</color>
+    <color name="rosa_indio">#D87093</color>
+    <color name="azul_cobalto">#0047AB</color>
+    <color name="azul_real">#4169E1</color>
+    <color name="azul_zafiro">#0F52BA</color>
+    <color name="esmeralda">#50C878</color>
+    <color name="verde_forestal">#228B22</color>
+    <color name="verde_primavera">#00FF7F</color>
+    <color name="verde_marino">#2E8B57</color>
+    <color name="caqui">#C3B091</color>
+    <color name="marron_chocolate">#7B3F00</color>
+    <color name="rosa_salmon">#FF91A4</color>
+    <color name="tabaco">#967117</color>
+    <color name="azul_bebé">#89CFF0</color>
+    <color name="pizarra">#708090</color>
+    <color name="rosa_chicle">#FF9FF3</color>
+    <color name="amarillo_platano">#FFE135</color>
+    <color name="verde_menta">#98FF98</color>
+    <color name="frambuesa">#E30B5D</color>
+    <color name="marron_madera">#8B4513</color>
+    <color name="arena">#C2B280</color>
+    <color name="laton">#B5A642</color>
+    <color name="melon_dorado">#E7A54B</color>
+    <color name="verde_mosque">#6B8E23</color>
+    <color name="amarillo_maiz">#FFBF00</color>
+    <color name="violeta_frances">#8B00FF</color>
+    <color name="rojo_nariz_de_payaso">#FF2400</color>
+    <color name="azul_polvo">#B0E0E6</color>
+    <color name="papaya">#FFEFD5</color>
+    <color name="gris_perla">#C0C0C0</color>
+    <color name="violeta_oscuro">#9400D3</color>
+    <color name="rojo_escarlata_oscuro">#8B0000</color>
+    <color name="rosa_palo">#D3A2C2</color>
+    <color name="marron_siena">#8A3324</color>
+    <color name="azul_petroleo">#008080</color>
+    <color name="verde_manzana">#8DB600</color>
+    <color name="rosa_dulce">#FFDFDD</color>
+    <color name="verde_pastel">#7FFFD4</color>
+    <color name="azul_arandano">#4F86F7</color>
+    <color name="turquesa_claro">#AFEEEE</color>
+    <color name="marfil">#FFFFF0</color>
+    <color name="oro_metalico">#D4AF37</color>
+    <color name="plata">#C0C0C0</color>
+    <color name="bronce">#CD7F32</color>
+    <color name="turquesa_oscuro">#00CED1</color>
+    <color name="gris_carbon">#2F4F4F</color>
+    <color name="burdeos">#800020</color>
+    <color name="zafiro">#082567</color>
+    <color name="rojo_escarlata_claro">#FF4500</color>
+    <color name="rosa_claro">#FFB6C1</color>
+    <color name="marfil_claro">#FFF8DC</color>
+    <color name="rosa_vivo">#FF1493</color>
+    <color name="cian_claro">#E0FFFF</color>
 </resources>
