--- a/app/src/main/res/layout/fragment_edicion.xml
+++ b/app/src/main/res/layout/fragment_edicion.xml
@@ -56,8 +56,8 @@
             android:id="@+id/editSearchSerialNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textColor="@color/input_text_gray"/>
+            android:textColor="@color/input_text_gray"
+            android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Tarjeta de Imagen - Muestra la foto de la laptop -->
@@ -217,7 +217,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginEnd="250dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#FF5252"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/fabSave"
