--- a/app/src/main/res/layout/item_historial.xml
+++ b/app/src/main/res/layout/item_historial.xml
@@ -49,7 +49,7 @@
                     android:textColor="@android:color/darker_gray" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/tipoAccion"
+                    android:id="@+id/numeroSerieChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text=""
