--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -119,4 +119,11 @@
     <color name="marfil_claro">#FFF8DC</color>
     <color name="rosa_vivo">#FF1493</color>
     <color name="cian_claro">#E0FFFF</color>
+
+    <!-- Colores para navegación -->
+    <color name="nav_unselected">#757575</color>
+    <color name="nav_inicio">#8BC34A</color>
+    <color name="nav_registro">#7C4DFF</color>
+    <color name="nav_historial">#00BCD4</color>
+    <color name="nav_edicion">#FF9800</color>
 </resources>
